fixed bug with search options overlapping add book btn, adjusted responsiveness

--- a/style.scss
+++ b/style.scss
@@ -121,7 +121,7 @@ header{
 }
 
 main{
-    padding-top: 94px;
+    padding: 94px 0 75px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -137,7 +137,6 @@ main{
 .add-book{
     flex-basis: 480px;
     margin-top: 20px;
-    position: sticky;
     top: 20px;
     align-self: flex-start;
     &__btn{
@@ -200,8 +199,17 @@ main{
     display: flex;
     flex-wrap: wrap;
     row-gap: 30px;
-    @media (max-width: 1015px){    
-        justify-content: center;        
+    @media (max-width: 1014px){    
+        flex-direction: column;        
+        align-items: center;
+    }
+    @media (max-width: 753px){
+        flex-direction: row;
+        justify-content: center;
+    }
+    @media (max-width: 537px){
+        flex-direction: column;
+        align-items: center;
     }
 }
 // footer elements styling
@@ -218,7 +226,7 @@ main{
     width: $book-width;
     height: $book-height;
     margin-right: 60px;
-    @media (max-width: 520px) {
+    @media (max-width: 537px){
         margin: 0 30px;
     }
     overflow: hidden;
@@ -339,6 +347,9 @@ main{
 }
 .abs{
     position: absolute;
+}
+.sticky{
+    position: sticky;
 }
 .z1{
     z-index: 1;
